--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,14 @@
 <html>
 <head>
   <title>Xeno2</title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag 'header',:media => 'screen' %>
+  <%= stylesheet_link_tag 'footer',:media => 'screen' %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= render "layouts/header" %> 
+  <%= yield %>
+  <%= render "layouts/footer" %>
 </body>
 </html>
